2009-03-30  Markus Gutschke  <markus@shellinabox.com>

	* Added initial revision of demo application

2009-03-29  Markus Gutschke  <markus@shellinabox.com>

	* Added support for chained SSL certificates

2009-03-23  Markus Gutschke  <markus@shellinabox.com>

	* Added an INSTALL.Debian file with Debian-specific instructions on
	how to build and install a package file.

2009-03-21  Markus Gutschke  <markus@shellinabox.com>

	* Possible fix for IE problems with horizontal positioning of
	cursor if the line ends in spaces.

	* Work-around for an IE6 bug when doing HTTPS through proxies.
	
2009-03-21  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.5

	* More testing on older IE versions.

2009-03-19  Markus Gutschke  <markus@shellinabox.com>

	* Fixed cursor positioning. Hopefully, more browsers will be happy
	with this, now.

	* Explicitly added no-cache headers to our responses. This might help
	with the IE6 problems.

2009-03-17  Markus Gutschke  <markus@shellinabox.com>

	* Allow root to bind to privileged port.

2009-03-17  Markus Gutschke  <markus@shellinabox.com>

	* Fixed IE6 support.

	* Fixed possible memory corruption, when sessions time out.

2009-03-16  Markus Gutschke  <markus@shellinabox.com>

	* Fixed some compiler warnings, that newer versions of GCC issue.

2009-02-27  Markus Gutschke  <markus@shellinabox.com>

	* Added fallback on old-style pty's, if /dev/pts is not mounted.

	* Work-around for systems that don't define a "nogroup" group.

	* Remove the dependency on fdopendir, which does not exist
	everywhere.

2009-02-16  Markus Gutschke  <markus@shellinabox.com>

	* Include VCS revision number in user-visible version string.

	* Allow "configure" to select whether OpenSSL and PAM libraries
	should be used at all, dynamically searched-for at run-time, or
	linked as a regular dynamic library.

	* Fixed various bugs that prevents ShellInABox from running on
	FreeBSD

2009-02-12  Markus Gutschke  <markus@shellinabox.com>
